tests/neg-custom-args/captures/sep-use.check
-- Error: tests/neg-custom-args/captures/sep-use.scala:7:10 ------------------------------------------------------------
7 |  println(io) // error
  |          ^^
  |          Separation failure: Illegal access to {io} which is hidden by the previous definition
  |          of value x with type () => Unit.
  |          This type hides capabilities  {io}
  |
  |          where:    => refers to a root capability in the type of value x
-- Error: tests/neg-custom-args/captures/sep-use.scala:12:12 -----------------------------------------------------------
12 |  def x: () => Unit = () => println(io)  // error
   |         ^^^^^^^^^^
   |         Separation failure: method x's result type () => Unit hides non-local parameter io
-- Error: tests/neg-custom-args/captures/sep-use.scala:13:10 -----------------------------------------------------------
13 |  println(io) // error
   |          ^^
   |          Separation failure: Illegal access to {io} which is hidden by the previous definition
   |          of method x with result type () => Unit.
   |          This type hides capabilities  {io}
   |
   |          where:    => refers to a root capability in the result type of method x
-- Error: tests/neg-custom-args/captures/sep-use.scala:18:10 -----------------------------------------------------------
18 |  def xx: (y: Int) => Unit = _ => println(io)  // error
   |          ^^^^^^^^^^^^^^^^
   |          Separation failure: method xx's result type (y: Int) => Unit hides non-local parameter io
-- Error: tests/neg-custom-args/captures/sep-use.scala:19:10 -----------------------------------------------------------
19 |  println(io) // error
   |          ^^
   |          Separation failure: Illegal access to {io} which is hidden by the previous definition
   |          of method xx with result type (y: Int) => Unit.
   |          This type hides capabilities  {io}
   |
   |          where:    => refers to a root capability in the result type of method xx
-- Error: tests/neg-custom-args/captures/sep-use.scala:24:19 -----------------------------------------------------------
24 |  def xxx(y: Int): Object^ = io  // error
   |                   ^^^^^^^
   |                   Separation failure: method xxx's result type Object^ hides non-local parameter io
-- Error: tests/neg-custom-args/captures/sep-use.scala:25:10 -----------------------------------------------------------
25 |  println(io) // error
   |          ^^
   |          Separation failure: Illegal access to {io} which is hidden by the previous definition
   |          of method xxx with result type Object^.
   |          This type hides capabilities  {io}
   |
   |          where:    ^ refers to a root capability in the result type of method xxx
